--- a/content/docs/fullstack/(how-tos)/deploy-azure.mdx
+++ b/content/docs/fullstack/(how-tos)/deploy-azure.mdx
@@ -1,11 +1,6 @@
 ---
-title: Azure Cloud
-description: Your first document
+title: How to deploy to Azure
 ---
-
-# Azure Cloud
-
-![alt text](/docs/image.png)
 
 ## Prerequisites
 
@@ -39,11 +34,11 @@ The template is configured to offer the following environment workflow, that can
 
 In the _Basics_ section, begin by configuring your new app and linking it to a GitHub repository.
 
-![Screenshot of the basics section in the Azure portal.](image-1.png)
+{/* ![Screenshot of the basics section in the Azure portal.](image-1.png) */}
 
 After you **sign in with GitHub**, enter the repository information.
 
-![Screenshot of repository details in the Azure portal.](image-2.png)
+{/* ![Screenshot of repository details in the Azure portal.](image-2.png) */}
 
 > Note
 >
