--- a/content/docs/fullstack/(technologies)/clerk.mdx
+++ b/content/docs/fullstack/(technologies)/clerk.mdx
@@ -1,11 +1,8 @@
 ---
 title: Clerk
-description: Your first document
+description: Authentication without the headache
 ---
 
-# Clerk 
-
-## Authentication Without the Headache
 Setting up authentication **shouldn’t be a nightmare**. With Clerk, we get a **fully managed authentication service** that integrates seamlessly into our applications in just a few minutes—**no complex setup, no maintenance, no stress.**
 
 ## Why Clerk?
