--- a/content/docs/fullstack/(technologies)/drizzle-orm.mdx
+++ b/content/docs/fullstack/(technologies)/drizzle-orm.mdx
@@ -1,9 +1,7 @@
 ---
 title: Drizzle ORM
-description: Your first document
+description: Drizzle is a headless Typescript ORM with relational and SQL-like query APIs
 ---
-
-# Drizzle
 
 Drizzle is a headless Typescript ORM with [relational↗](https://orm.drizzle.team/docs/rqb) and [SQL-like↗](https://orm.drizzle.team/docs/select) query APIs. It can handle database migrations and schemas, and provides a type safe database client. It also comes with [Drizzle-Kit↗](https://orm.drizzle.team/drizzle-studio/overview), a set of companion tools that help with querying your database.
 
